Proyecto finalizado con exito

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- FavIcon-->
     <link rel="shortcut icon" href="multimedia/logos/LogoTitle.svg" type="image/x-icon">
     <script defer src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -66,6 +67,10 @@
     </header>
     <main id="main">
         <section>
+            <div class="loader-page">
+                    <!-- <div class="loader-img"></div> -->
+                    <img src="multimedia/logos/LogoMain.svg" alt="CuevaTomasArg">
+            </div>
             <p>
                 Hola, soy
             </p>
