--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-    <header>
-        <nav id="header">
-            <img src="multimedia/logos/LogoMain.svg" alt="CuevaTomasIcon">
+    <header class="page-header">
+        <nav id="header trigger-menu-wrapper">
+            <img src="multimedia/logos/LogoMainWhite.svg" alt="CuevaTomasIcon">
             <button type="button" id="nav-button" class="nav-button" onclick="openNav()">
                 <span></span>
                 <span></span>
@@ -69,7 +69,7 @@
         <section>
             <div class="loader-page">
                     <!-- <div class="loader-img"></div> -->
-                    <img src="multimedia/logos/LogoMain.svg" alt="CuevaTomasArg">
+                    <img src="multimedia/logos/LogoMainBlue.svg" alt="CuevaTomasArg">
             </div>
             <p>
                 Hola, soy
