--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
-    
     <meta name="description" content="Soy un programador dedicado a desarrollar sistemas de gestion, organización, 
     planificación y análisis para mejorar los resultados de tu negocio. Liberandote tiempo de tareas operativas 
     que te llevan horas y que realmente son tediosas.">
-    
     <meta name="keywords" content="e-commerce ,proyectar, optimizar,gestion ,sistemas , 
     automatizar, planificar, simple, complejo, desarrollo, web, software, ahorrar ,tiempo, escalable, ">
     <meta name="og:title" content="Desarrollo de software para optimización de negocios">
@@ -22,13 +20,9 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Cueva Tomas - Portfolio</title>
     <link rel="cannonical" href="https://CuevaTomasArg.github.io/">
-    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- BoostrapIcons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- FavIcon-->
     <link rel="shortcut icon" href="multimedia/logos/LogoTitle.svg" type="image/x-icon">
     <script defer src="js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -42,7 +36,7 @@
                 <span></span>
                 <span></span>
             </button>
-            <ul id="nav-list">
+            <ul id="nav-list" style="width: auto;">
                 <li class="closebtn">
                     <a href="javascript:void(0)" onclick="closeNav()">&times</a>
                 </li>
