Se arreglo el error del header que se momovia cunado scrolleavas

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-    <header class="page-header">
+    <header class="page-header" id="nav-bar">
         <nav id="header trigger-menu-wrapper">
             <img src="multimedia/logos/LogoMainWhite.svg" alt="CuevaTomasIcon">
             <button type="button" id="nav-button" class="nav-button" onclick="openNav()">
